--- a/S04 - Text Classification/BLU09 - Information Extraction/Exercise notebook.ipynb
+++ b/S04 - Text Classification/BLU09 - Information Extraction/Exercise notebook.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -86,7 +86,76 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>message</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Go until jurong point, crazy.. Available only ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Ok lar... Joking wif u oni...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>spam</td>\n",
+       "      <td>Free entry in 2 a wkly comp to win FA Cup fina...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>U dun say so early hor... U c already then say...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Nah I don't think he goes to usf, he lives aro...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  label                                            message\n",
+       "0   ham  Go until jurong point, crazy.. Available only ...\n",
+       "1   ham                      Ok lar... Joking wif u oni...\n",
+       "2  spam  Free entry in 2 a wkly comp to win FA Cup fina...\n",
+       "3   ham  U dun say so early hor... U c already then say...\n",
+       "4   ham  Nah I don't think he goes to usf, he lives aro..."
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.read_csv('datasets/spam.csv', encoding='latin1')\n",
     "df.drop([\"Unnamed: 2\", \"Unnamed: 3\", \"Unnamed: 4\"], axis=1,inplace=True)\n",
@@ -96,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -116,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -148,7 +217,7 @@
     }
    },
    "source": [
-    "## Q1 - Text exploration with SpaCy \n",
+    "# Q1 - Text exploration with SpaCy \n",
     "\n",
     "Your team's productivity is plummeting: there is just way too many spam emails jamming everyone's inboxes. You decide to take action. In order to look cool in front of everyone and save the team from disgrace, you decide to build a spam classifier that will filter out spam emails. \n",
     "\n",
@@ -162,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -186,14 +255,14 @@
     "#for doc in docs:\n",
     "#    matches = ...\n",
     "#    count += ...\n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "words = [token.text for t in docs for token in t]\n",
+    "allwords = [w for w in words if w == \"FREE\" or w == \"WIN\" or w == \"URGENT\"]\n",
+    "count = len(allwords)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -233,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -258,14 +327,16 @@
     "#    matches = ...\n",
     "#    for ... in matches:\n",
     "#        url_list.append(...)\n",
-    "        \n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "token_list = [token for t in docs for token in t]\n",
+    "url_list = []\n",
+    "for token in token_list:\n",
+    "    if token.like_url:\n",
+    "        url_list.append(token)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -312,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -331,20 +402,15 @@
     "#matcher = ...\n",
     "#pattern = [...]\n",
     "#matcher.add(...)\n",
-    "#\n",
-    "#verb_counts = []\n",
-    "#for doc in docs:\n",
-    "#    matches = ...\n",
-    "#    verb_counts.append(...)\n",
-    "\n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "verb_counts = []\n",
+    "for doc in docs:\n",
+    "    a_list = [word for word in doc if word.pos_ == 'VERB']\n",
+    "    verb_counts.append(len(a_list))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -380,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -394,23 +460,26 @@
    "outputs": [],
    "source": [
     "# Build a matcher to extract the organization-type entities from the text and assign them to most_common_ents\n",
-    "#\n",
-    "#matcher = ...\n",
-    "#\n",
-    "#pattern = [...]\n",
-    "#matcher.add(...)\n",
-    "# \n",
-    "#...\n",
-    "#\n",
-    "# most_common_ents = ...\n",
+    "from collections import Counter\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "q = []\n",
+    "r = []\n",
+    "for doc in docs:\n",
+    "    for w in doc.ents:\n",
+    "        if w.label_ == 'ORG':\n",
+    "            q.append(w)\n",
+    "for e in q:\n",
+    "    for w in e:\n",
+    "        r.append(w)\n",
+    "for i, e in zip(range(len(r)), r):\n",
+    "    r[i] = str(e).title()\n",
+    "e = Counter(r)\n",
+    "most_common_ents = e.most_common(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -452,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -482,7 +551,19 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NotImplementedError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-601f6e2988e8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;31m# YOUR CODE HERE\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m \u001b[1;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNotImplementedError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "#Build a `Matcher` that matches all ocurrences of an adjective followed by\n",
     "#and organization and store the 5 most common ocurrences in a list named most_common_adj_ents\n",
@@ -549,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -572,29 +653,23 @@
     "#    for token in doc:\n",
     "#        print(token.pos_)\n",
     "\n",
-    "#n_ents = []\n",
-    "#n_verb_adjs = []\n",
-    "#len_message = []\n",
-    "#\n",
-    "#for doc in all_docs:\n",
-    "#    count_ents = 0\n",
-    "#    count_verb_adjs = 0\n",
-    "#    ...\n",
-    "#    n_ents.append(count_ents)\n",
-    "#    n_verb_adjs.append(count_verb_adjs)\n",
-    "#    len_message.append(...)\n",
-    "#    \n",
-    "#df['n_verb_adjs'] = n_verb_adjs\n",
-    "#df['n_ents'] = n_ents\n",
-    "#df['len_message'] = len_message\n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "n_ents = []\n",
+    "n_verb_adjs = []\n",
+    "len_message = []\n",
+    "for doc in all_docs:\n",
+    "    h = [word for word in doc if word.pos_ == 'ADJ' or word.pos_ == 'VERB']\n",
+    "    n_verb_adjs.append(len(h))\n",
+    "    j = [word for word in doc.ents if word.label_ == 'ORG']\n",
+    "    n_ents.append(len(j))\n",
+    "   \n",
+    "df['n_verb_adjs'] = n_verb_adjs\n",
+    "df['n_ents'] = n_ents\n",
+    "df['len_message'] = df['message'].map(len)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -634,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -654,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -740,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -753,17 +828,14 @@
    },
    "outputs": [],
    "source": [
-    "#text_pipe = Pipeline(...)\n",
-    "#len_pipe =  Pipeline(...)\n",
-    "#feats = FeatureUnion(...)\n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "text_pipe = Pipeline([('selector', TextSelector(\"message\")), ('tfidf', TfidfVectorizer(ngram_range=(1,2)))])\n",
+    "len_pipe = Pipeline([('selector', NumberSelector(\"len_message\")), ('standard', StandardScaler(with_mean=False, with_std=False))])\n",
+    "feats = FeatureUnion([('text', text_pipe), ('length', len_pipe)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -776,7 +848,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9668\n"
+     ]
+    }
+   ],
    "source": [
     "assert isinstance(feats, FeatureUnion)\n",
     "assert any(isinstance(obj, Selector) for obj in feats.transformer_list[0][1])\n",
@@ -806,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -819,17 +899,13 @@
    },
    "outputs": [],
    "source": [
-    "#verbs = Pipeline(...)\n",
-    "#...\n",
-    "#feats_v2 = FeatureUnion(...)\n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "verbs = Pipeline([('selector', NumberSelector('n_verb_adjs'))])\n",
+    "feats_v2 = FeatureUnion([('text', text_pipe), ('length', len_pipe), ('verb', verbs)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -842,7 +918,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9704\n"
+     ]
+    }
+   ],
    "source": [
     "accuracy = get_accuracy(feats_v2, train_data, test_data)\n",
     "assert np.allclose(accuracy, 0.9704, 0.01)"
@@ -870,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -883,16 +967,13 @@
    },
    "outputs": [],
    "source": [
-    "#...\n",
-    "#feats_v3 = FeatureUnion(...)\n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "the_ents = Pipeline([('selector', NumberSelector('n_ents'))])\n",
+    "feats_v3 = FeatureUnion([('text', text_pipe), ('length', len_pipe), ('verb', verbs), ('ents', the_ents)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -905,7 +986,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9695\n"
+     ]
+    }
+   ],
    "source": [
     "accuracy = get_accuracy(feats_v3, train_data, test_data)\n",
     "assert np.allclose(accuracy, 0.9659, 0.01)"
